--- a/PawsitiveAPI/src/main/resources/application.properties.example
+++ b/PawsitiveAPI/src/main/resources/application.properties.example
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/PawsitiveQuotes
 spring.datasource.username=root
 spring.datasource.password=YOUR_PASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.port=8181
